<resources>
    <string name="app_name">GPS Tasker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_trigger">add trigger</string>
    <string name="silent">Silent</string>
    <string name="select_trigger_action">Select trigger action</string>
    <string name="alert">alert</string>
    <string name="trigger_label">Trigger label</string>
    <string name="radius">%.2f km</string>
    <string name="new_trigger">new trigger</string>
    <string name="grant">Grant</string>
    <string name="turn_on">Turn on</string>
    <string name="permission_denied_msg">
"Permission not Granted !\nGo to settings to grant permission"
</string>
    <string name="turn_location_on_msg">
"Please turn on the location !\nGo to settings to turn on location"
</string>
    <string name="up_button">up button</string>
    <string name="app_icon">app icon</string>
    <string name="gps_tasker_listen_to_trigger"><![CDATA[GPS Tasker > Listen to trigger]]></string>
    <string name="gps_tasker_select_location"><![CDATA[GPS Tasker > select location]]></string>
    <string name="task_completed">Task Completed</string>
    <string name="location_reached">Location reached</string>
    <string name="stop">stop</string>
    <string name="normal_map_mode">normal map mode</string>
    <string name="message">message</string>
    <string name="gps_tasker_add_trigger"><![CDATA[GPS Tasker > Add trigger]]></string>
    <string name="mobile_number">Mobile number</string>
    <string name="done">done</string>
    <string name="call">call</string>
    <string name="background_location_permission_msg">please consider clicking "Allow all the time" while giving permission to location access.\Otherwise app will not able check location in background</string>
    <string name="location_permission_msg">Location permission is necessary for the app to fetch your location and check if you reached the target location</string>
    <string name="message_permission_msg">The trigger that you want to start will send message when you reach the target location.\nSo message permission is necessary for the app to send message</string>
</resources>