<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.ActionActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/app_ico_iv"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/gps_ico"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_icon" />
            <TextView
                android:id="@+id/title_tv"
                style="@style/titleTextLev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/action_iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/bell"
            app:layout_constraintBottom_toTopOf="@+id/stop_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_tb" />

        <TextView
            android:id="@+id/msg_tv"
            style="@style/valueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_reached"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/action_iv"
            app:layout_constraintStart_toStartOf="@+id/action_iv"
            app:layout_constraintTop_toBottomOf="@+id/action_iv" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>