<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mk.gpstasker.viewmodel.TriggerDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/primary"
        tools:context=".view.fragments.TriggerDetailFragment">

        <TextView
            android:id="@+id/select_trigger_action_tv"
            style="@style/titleTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/select_trigger_action"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/silent_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_et" />

        <ImageView
            android:id="@+id/silent_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/highlight_bg_a"
            android:tag="selected"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_vibration_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_trigger_action_tv"
            android:contentDescription="@string/silent" />

        <TextView
            android:id="@+id/silent_tv"
            style="@style/valueTextSmall"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/silent"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/silent_iv"
            app:layout_constraintStart_toStartOf="@+id/silent_iv"
            app:layout_constraintTop_toBottomOf="@+id/silent_iv" />

        <ImageView
            android:id="@+id/alert_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_phonelink_ring_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_trigger_action_tv"
            android:contentDescription="@string/alert" />

        <TextView
            android:id="@+id/alert_tv"
            style="@style/valueTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Alert"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/alert_iv"
            app:layout_constraintStart_toStartOf="@+id/alert_iv"
            app:layout_constraintTop_toBottomOf="@+id/alert_iv" />

        <TextView
            android:id="@+id/label_tv"
            style="@style/titleTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trigger_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--TODO:add material edit text        -->

        <EditText
            android:id="@+id/label_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/trigger_label"
            android:text="@={viewModel.triggerLabel}"
            android:textColorHighlight="@color/on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="25dp"
            android:text="@string/add_trigger"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>