<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".view.fragments.CreateMessageFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/up_button"
                android:padding="0dp"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <ImageView
                android:id="@+id/app_ico_iv"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/gps_ico" />

            <TextView
                android:id="@+id/title_tv"
                style="@style/titleTextLev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gps Tasker > Create message" />

        </androidx.appcompat.widget.Toolbar>
        <!--TODO:add material edit text        -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:prefixText="+91"
            app:prefixTextColor="@color/primary_sat_highlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sms_banner_iv"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"

                />

        </com.google.android.material.textfield.TextInputLayout>
<!--TODO:Add multiline support-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/message_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_number_layout"
            app:startIconDrawable="@drawable/ic_baseline_message_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                android:inputType="textLongMessage"
                android:maxLength="50"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/sms_banner_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/msg_with_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_tb" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>